# artifacts_cvsa

./: CMakeLists.txt  README.md  package.xml
cfg/: artifact.yaml
include/artifacts_bci/: ArtifactDetector.h
include/artifacts_cvsa/: ArtifactDetector.h  utils.hpp
launchers/: example_node_artifact.launch
msg/: artifact_presence.msg
src/: ArtifactDetector.cpp  artifactDetector_node.cpp
test/: test_artifacts.asv  test_artifacts.m
test/node/: artifacts.csv  logger.cpp  publisher.cpp  test_node_artifact.launch
